--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 /* this gives the hovering effect over the project picutres */
-img:hover {
+#smallBig:hover {
   transform: scale(1.3);
 }
 .p-r {
